static/css/base.css
/*-----------Footer-----------*/
.footer {
    background-color: rgb(230, 230, 230);
}

.social-links {
    list-style: none;
    display: flex;
}

.social-links li {
    margin: 1rem;
    font-size: 2rem;
}

.recipe-featurette {
    background: url('/media/mae-mu-ecUVGNZA1TM-unsplash.jpg');
    height: 35rem;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: bottom;
    color: #ffffff;
}

.product-featurette {
    background: url('/media/honey-jar-with-wooden-stick-drains-honey-dark-background_70626-4706.jpg');
    height: 35rem;
    background-size: cover;
    background-repeat: no-repeat;
    background-position-x: 86%;
    color: #ffffff;
}

.how-works i {
    font-size: 3rem;
    padding-top: 2rem;
}

.absolute {
    position: absolute;
}

/*---- General Administration/Accounts -----*/

.account-form {
    filter: drop-shadow(2px 3px 5px rgba(0, 0, 0, 0.384));
    background-color: rgba(0, 0, 0, 0.466);
    color: white;
}

.account-form h1,
.account-form p {
    text-align: center;
}

.account-form button,
.account-form .btn {
    width: 100%;
}

.account-form i {
    font-size: 10rem;
    text-align: center;
    margin: auto;
}

.password_change a {
    display: flex;
    justify-content: center;
    color: white;
}

/*------Sign up + Login ----------*/
.signup-img {
    background-image: url('/media/pexels-artem-saranin-1187079.jpg');
    background-size: cover;
    background-repeat: no-repeat;
}

.signup-form {
    background-color: white;
}

/*--Toasts and messages---*/
.message-container {
    position: fixed;
    top: 6%;
    right: 0%;
    z-index: 99999;
    background-color: #ffffff;
}

/*---------About ---------*/

.who img {
    width: 100%;
    object-fit: cover;
    height: 14rem;
    margin-top: 1.5rem;
    margin-bottom: 1.5rem;
}

.who .text-muted {
    font-size: 0.75rem;
}

/*-----Contact--------*/

#map {
    height: 16rem;
}

/*----------- Tablet-------------*/
@media(min-width:768px) {

    .recipe-featurette,
    .product-featurette {
        height: 26rem;
        background-position: bottom;
    }
}

/*----------- Laptop-------------*/
@media(min-width:992px) {

    .recipe-featurette,
    .product-featurette {
        height: 35rem;
        background-position: bottom;
    }

    .account-form button,
    .account-form .btn {
        width: 50%;
    }

    .who img {
        height: 24rem;
        margin-top: 0;
        margin-bottom: 0;
        padding: 2rem;
    }
}

